# grafanapy

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
examples/json_to_python/: input.json  output.py  run.sh
examples/python_to_json/: README.md  run.sh
grafanapy/: extracted_generated_common_models.py  grafana_dashboard.py  manual_models.py  utils.py
grafanapy/converter/: json_to_python.py  python_to_json.py
grafanapy/model/: alertgroupspanelcfg_types_gen.py  annotationslistpanelcfg_types_gen.py  azuremonitordataquery_types_gen.py  barchartpanelcfg_types_gen.py  bargaugepanelcfg_types_gen.py  cloudwatchdataquery_types_gen.py  dashboard_types_gen.py  dashboardlistpanelcfg_types_gen.py  datagridpanelcfg_types_gen.py  debugpanelcfg_types_gen.py  elasticsearchdataquery_types_gen.py  gaugepanelcfg_types_gen.py  geomappanelcfg_types_gen.py  grafanapyroscopedataquery_types_gen.py  heatmappanelcfg_types_gen.py  histogrampanelcfg_types_gen.py  librarypanel_types_gen.py  logspanelcfg_types_gen.py  lokidataquery_types_gen.py  newspanelcfg_types_gen.py  nodegraphpanelcfg_types_gen.py  parcadataquery_types_gen.py  piechartpanelcfg_types_gen.py  playlist_types_gen.py  preferences_types_gen.py  prometheusdataquery_types_gen.py  publicdashboard_types_gen.py  serviceaccount_types_gen.py  statetimelinepanelcfg_types_gen.py  statpanelcfg_types_gen.py  statushistorypanelcfg_types_gen.py  tablepanelcfg_types_gen.py  team_types_gen.py  tempodataquery_types_gen.py  testdatadataquery_types_gen.py  textpanelcfg_types_gen.py  (+2 more)
scripts/: generate_raw_model.py
(+31 files in other folders)
