[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grafanapy"
dependencies = ["pydantic>=2,<3"]
requires-python = ">=3.8"
authors = [
    { name = "Alessio Sanfratello", email = "sanfra90@gmail.com" },
    { name = "fzyzcjy" },
]
maintainers = [{ name = "Alessio Sanfratello", email = "sanfra90@gmail.com" }]
description = "Write Grafana dashboards in Python, without losing thousands of dashboards in the zoo"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["grafana", "dashboard", "json"]
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Beta",
    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    # Pick your license as you wish (should match "license" above)
    "License :: OSI Approved :: MIT License"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pre-commit"
]


[project.urls]
Homepage = "https://github.com/alesanfra/grafanapy"
Documentation = "https://github.com/alesanfra/grafanapy"
Repository = "https://github.com/alesanfra/grafanapy"

[tool.hatch.version]
path = "grafanapy/__init__.py"
